# Configuration-Integrity-Verification

./: CMakeLists.txt  Configuration Integrity Verification.vcxproj  Configuration Integrity Verification.vcxproj.filters  README  main.cpp
data/: AttestableFile_correct  AttestableFile_modified
include/: CreateResponse.h  Orchestrator.h  PCRSelection.h  PolicyManager.h  Template.h  TpmManager.h  VMStructure.h  VirtualMachine.h  defines.h  tss_includes.h
source/: Orchestrator.cpp  PolicyManager.cpp  Template.cpp  TpmManager.cpp  VirtualMachine.cpp  cryptoutils.c
utils/: Orchestrator.cpp  PolicyManager.cpp  Template.cpp  TpmManager.cpp  VirtualMachine.cpp
